--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,47 @@
 annotated-types==0.6.0
 anyio==3.7.1
 certifi==2023.7.22
+charset-normalizer==3.4.1
 click==8.1.7
 dnspython==2.4.2
-python-dotenv==1.0.0
+dotenv==0.9.9
 fastapi==0.103.1
+filelock==3.18.0
+fsspec==2025.3.0
 h11==0.14.0
+huggingface-hub==0.29.3
 idna==3.4
+Jinja2==3.1.6
 joblib==1.3.2
-numpy==1.26.0
-pandas==2.0.3
-pydantic==2.4.2
-pydantic_core==2.10.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.3
+packaging==24.2
+pandas==2.2.3
+pydantic==2.10.6
+pydantic_core==2.27.2
 pymongo==4.5.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
-scikit-learn==1.3.0
-scipy==1.11.3
-six==1.16.0
-sniffio==1.3.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==76.0.0
+six==1.17.0
+sniffio==1.3.1
 starlette==0.27.0
-threadpoolctl==3.2.0
-typing_extensions==4.8.0
-tzdata==2023.3
-uvicorn==0.23.2
+sympy==1.13.1
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.49.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+uvicorn==0.34.0
